--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         image:
-          - 'quay.io/pypa/manylinux2014_x86_64'
+          #- 'quay.io/pypa/manylinux2014_x86_64'
           - 'quay.io/pypa/manylinux2014_aarch64'
         python-version: 
           - cp36-cp36m
