--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,22 +13,10 @@ jobs:
 #     NO_NET: 1
     strategy:
       matrix:
-        image:
-          #- 'quay.io/pypa/manylinux2014_x86_64'
-          - 'quay.io/pypa/manylinux2014_aarch64'
-        python-version: 
-          - cp36-cp36m
-          - cp37-cp37m
-          - cp38-cp38
-          - cp39-cp39
+        python-version: ["3.9"]
     steps:
 
     - uses: actions/checkout@v2
-   
-    - uses: docker/setup-qemu-action@v1
-      if: ${{ matrix.image == 'quay.io/pypa/manylinux2014_aarch64' }}
-      name: Set up QEMU
-
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
@@ -58,7 +46,6 @@ jobs:
         make -j 2
         make install
         popd
-
 #   - name: The job has failed
 #     if: ${{ failure() }}
 #     run: |
@@ -69,11 +56,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install numpy cython cftime pytest twine wheel check-manifest mpi4py
-
     - name: Install netcdf4-python
       run: |
         export PATH=${NETCDF_DIR}/bin:${PATH} 
         python setup.py install
+    - uses: docker/setup-qemu-action@v1
+      name: Set up QEMU
+    - name: Build and publish (Linux aarch64)
+      uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_aarch64
+      with:
+        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
     - name: Test
       run: |
         export PATH=${NETCDF_DIR}/bin:${PATH} 
@@ -97,7 +89,6 @@ jobs:
         else
           echo "pnetcdf mpi test passed!"
         fi
-
     - name: Tarball
       run: |
         export PATH=${NETCDF_DIR}/bin:${PATH} 
