--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build and Test Linux
 on: [push, pull_request]
 jobs:
   build-linux:
-    name: Python (${{ matrix.python-version }})
+    name: Build wheels on ${{matrix.arch}} #Python (${{ matrix.python-version }})
     runs-on: ubuntu-latest
     env:
       PNETCDF_VERSION: 1.12.1
@@ -13,7 +13,7 @@ jobs:
 #     NO_NET: 1
     strategy:
       matrix:
-        python-version: ["3.9"]
+        arch: [x86_64, aarch64]
     steps:
 
     - uses: actions/checkout@v2
@@ -21,8 +21,12 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+          python-version: '3.9'
 
+    - uses: docker/setup-qemu-action@v1
+      if:  ${{matrix.arch}} == 'aarch64'
+      name: Set up QEMU
+      
     - name: Install Ubuntu Dependencies
       run: |
         sudo apt-get update
@@ -60,12 +64,7 @@ jobs:
       run: |
         export PATH=${NETCDF_DIR}/bin:${PATH} 
         python setup.py install
-    - uses: docker/setup-qemu-action@v1
-      name: Set up QEMU
-    - name: Build and publish (Linux aarch64)
-      uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_aarch64
-      with:
-        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
+  
     - name: Test
       run: |
         export PATH=${NETCDF_DIR}/bin:${PATH} 
