--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,7 +118,7 @@ jobs:
             bash -exc '${{ env.py }} -m pip install virtualenv && ${{ env.py }} -m venv .env && \
             source .env/bin/activate && \
             python -m pip install --upgrade pip && \
-            pip install numpy cython cftime pytest twine wheel check-manifest mpi4py && \
+            pip install numpy cython cftime pytest twine wheel check-manifest && \
             deactivate'
     - name: Test with pytest
       run: |
