--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,6 +120,15 @@ jobs:
             python -m pip install --upgrade pip && \
             pip install numpy cython cftime pytest twine wheel check-manifest && \
             deactivate'
+    - name: Install netcdf4-python
+      run: |
+          docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
+            ${{ env.img }} \
+            bash -exc '\
+            source .env/bin/activate && \
+            export PATH=${NETCDF_DIR}/bin:${PATH} && \ 
+            python setup.py install && \
+            deactivate'
     - name: Test with pytest
       run: |
           docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
@@ -147,32 +156,4 @@ jobs:
               echo "pnetcdf mpi test passed!" && \
             fi && \
             deactivate'
-  build-aarch64:
-    name: "Build on ${{ matrix.pyver }} aarch64"
-    strategy:
-      matrix:
-        pyver: [cp36-cp36m, cp37-cp37m, cp38-cp38, cp39-cp39]
-        arch: [aarch64]
-      fail-fast: false
-    runs-on: ubuntu-latest
-    env:
-      py: /opt/python/${{ matrix.pyver }}/bin/python
-      img: quay.io/pypa/manylinux2014_${{ matrix.arch }}
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Set up QEMU
-      id: qemu
-      uses: docker/setup-qemu-action@v1
-    - name: Install tools
-      run: |
-        docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
-          ${{ env.img }} ${{ env.py }} -m pip install -U  pip build pytest
-    - name: Make wheel
-      run: |
-        docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
-          ${{ env.img }} ${{ env.py }} -m build
-    - name: Repair wheel wheel
-      run: |
-        docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
-          ${{ env.img }} auditwheel repair dist/*.whl --wheel-dir wheelhouse/
+  
