--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,6 +123,7 @@ jobs:
             ${{ env.img }} \
             bash -exc '${{ env.py }} -m pip install virtualenv && ${{ env.py }} -m venv .env && \
             source .env/bin/activate && \
+            uname -m
             sudo apt-get update && \
             sudo apt-get install mpich libmpich-dev libhdf5-mpich-dev libcurl4-openssl-dev  && \
             echo "Download and build PnetCDF version ${PNETCDF_VERSION}" && \
