--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,8 +124,8 @@ jobs:
             bash -exc '${{ env.py }} -m pip install virtualenv && ${{ env.py }} -m venv .env && \
             source .env/bin/activate && \
             uname -m
-            sudo apt-get update && \
-            sudo apt-get install mpich libmpich-dev libhdf5-mpich-dev libcurl4-openssl-dev  && \
+            yum update && \
+            yum install mpich libmpich-dev libhdf5-mpich-dev libcurl4-openssl-dev  && \
             echo "Download and build PnetCDF version ${PNETCDF_VERSION}" && \
             wget https://parallel-netcdf.github.io/Release/pnetcdf-${PNETCDF_VERSION}.tar.gz && \
             tar -xzf pnetcdf-${PNETCDF_VERSION}.tar.gz && \
