--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,7 +125,7 @@ jobs:
             source .env/bin/activate && \
             uname -m
             yum update && \
-            yum install mpich libmpich-dev libhdf5-mpich-dev libcurl4-openssl-dev  && \
+            yum install mpich openmpi hdf5-devel curl-devel  && \
             echo "Download and build PnetCDF version ${PNETCDF_VERSION}" && \
             wget https://parallel-netcdf.github.io/Release/pnetcdf-${PNETCDF_VERSION}.tar.gz && \
             tar -xzf pnetcdf-${PNETCDF_VERSION}.tar.gz && \
