--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,10 +124,10 @@ jobs:
             bash -exc '${{ env.py }} -m pip install virtualenv && ${{ env.py }} -m venv .env && \
             source .env/bin/activate && \
             uname -m
-            yum update && \
-            yum install –y epel-release && \
-            yum-config-manager --enable epel && \
-            yum install mpich openmpi hdf5-devel curl-devel  && \
+            sudo yum update && \
+            sudo yum install epel-release && \
+            sudo yum-config-manager --enable epel && \
+            sudo yum install mpich openmpi hdf5-devel curl-devel  && \
             echo "Download and build PnetCDF version ${PNETCDF_VERSION}" && \
             wget https://parallel-netcdf.github.io/Release/pnetcdf-${PNETCDF_VERSION}.tar.gz && \
             tar -xzf pnetcdf-${PNETCDF_VERSION}.tar.gz && \
