--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,6 +124,7 @@ jobs:
             bash -exc '${{ env.py }} -m pip install virtualenv && ${{ env.py }} -m venv .env && \
             source .env/bin/activate && \
             uname -m
+            yum install sudo && \
             sudo yum update && \
             sudo yum install epel-release && \
             sudo yum-config-manager --enable epel && \
