--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,11 +124,11 @@ jobs:
             bash -exc '${{ env.py }} -m pip install virtualenv && ${{ env.py }} -m venv .env && \
             source .env/bin/activate && \
             uname -m
-            yum install sudo && \
+            yum install -y sudo && \
             sudo yum update && \
-            sudo yum install epel-release && \
+            sudo yum install -y epel-release && \
             sudo yum-config-manager --enable epel && \
-            sudo yum install mpich openmpi hdf5-devel curl-devel  && \
+            sudo yum -y install mpich openmpi hdf5-devel curl-devel  && \
             echo "Download and build PnetCDF version ${PNETCDF_VERSION}" && \
             wget https://parallel-netcdf.github.io/Release/pnetcdf-${PNETCDF_VERSION}.tar.gz && \
             tar -xzf pnetcdf-${PNETCDF_VERSION}.tar.gz && \
