--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -128,7 +128,7 @@ jobs:
             sudo yum update && \
             sudo yum install -y epel-release && \
             sudo yum-config-manager --enable epel && \
-            sudo yum -y install mpich openmpi hdf5-devel curl-devel  && \
+            sudo yum -y install mpich openmpi hdf5-devel curl-devel wget && \
             echo "Download and build PnetCDF version ${PNETCDF_VERSION}" && \
             wget https://parallel-netcdf.github.io/Release/pnetcdf-${PNETCDF_VERSION}.tar.gz && \
             tar -xzf pnetcdf-${PNETCDF_VERSION}.tar.gz && \
