--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,22 +129,22 @@ jobs:
             sudo yum install -y epel-release && \
             sudo yum-config-manager --enable epel && \
             sudo yum -y install mpich openmpi hdf5-devel curl-devel wget && \
-            echo "Download and build PnetCDF version ${PNETCDF_VERSION}" && \
-            wget https://parallel-netcdf.github.io/Release/pnetcdf-${PNETCDF_VERSION}.tar.gz && \
+            echo "Download and build PnetCDF version 1.12.1" && \
+            wget https://parallel-netcdf.github.io/Release/pnetcdf-1.12.1.tar.gz && \
             tar -xzf pnetcdf-${PNETCDF_VERSION}.tar.gz && \
-            pushd pnetcdf-${PNETCDF_VERSION} && \
+            pushd pnetcdf-1.12.1 && \
             ./configure --prefix $NETCDF_DIR --enable-shared --disable-fortran --disable-cxx && \
             make -j 2 && \
             make install && \
             popd && \
-            echo "Download and build netCDF version ${NETCDF_VERSION}" && \
-            wget ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf-c-${NETCDF_VERSION}.tar.gz && \
+            echo "Download and build netCDF version 4.7.4" && \
+            wget ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf-c-4.7.4.tar.gz && \
             tar -xzf netcdf-c-${NETCDF_VERSION}.tar.gz && \
-            pushd netcdf-c-${NETCDF_VERSION} && \
-            export CPPFLAGS="-I/usr/include/hdf5/mpich -I${NETCDF_DIR}/include" && \
-            export LDFLAGS="-L${NETCDF_DIR}/lib" && \
+            pushd netcdf-c-4.7.4 && \
+            export CPPFLAGS="-I/usr/include/hdf5/mpich -I${{ github.workspace }}/../include" && \
+            export LDFLAGS="-L${{ github.workspace }}/../lib" && \
             export LIBS="-lhdf5_mpich_hl -lhdf5_mpich -lm -lz" && \
-            ./configure --prefix $NETCDF_DIR --enable-netcdf-4 --enable-shared --enable-dap --enable-parallel4 $NETCDF_EXTRA_CONFIG && \
+            ./configure --prefix $NETCDF_DIR --enable-netcdf-4 --enable-shared --enable-dap --enable-parallel4 --enable-pnetcdf && \
             make -j 2 && \
             make install && \
             popd && \
