--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,7 +94,7 @@ jobs:
     name: "Test ${{ matrix.pyver }} aarch64"
     strategy:
       matrix:
-        pyver: [cp38-cp38]
+        pyver: [cp36-cp36m, cp37-cp37m, cp38-cp38, cp39-cp39]
         arch: [aarch64]
       fail-fast: false
     runs-on: ubuntu-latest
