--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -128,7 +128,7 @@ jobs:
             sudo yum update && \
             sudo yum install -y epel-release && \
             sudo yum-config-manager --enable epel && \
-            sudo yum -y install mpich openmpi-devel hdf5-devel curl-devel glibc-devel wget && \
+            sudo yum -y install mpich openmpi-devel hdf5-devel curl-devel wget && \
             source /etc/profile.d/modules.sh && \
             module load mpi && \
             mpifort --version && \
@@ -148,6 +148,7 @@ jobs:
             export LDFLAGS="-L${{ github.workspace }}/../lib" && \
             export LIBS="-lhdf5_mpich_hl -lhdf5_mpich -lm -lz" && \
             ./configure --prefix ${{ github.workspace }}/.. --enable-netcdf-4 --enable-shared --enable-dap --enable-parallel4 --enable-pnetcdf && \
+            config.log
             make -j 2 && \
             make install && \
             popd && \
