--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -151,6 +151,8 @@ jobs:
             #make -j 2 && \
             #make install && \
             popd && \
+            export PATH=${{ github.workspace }}/../bin:${PATH} && \ 
+            python setup.py install && \
             deactivate'
     - name: Install dependencies
       run: |
