--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -191,7 +191,7 @@ jobs:
             sudo yum update && \
             sudo yum install -y epel-release && \
             sudo yum-config-manager --enable epel && \
-            sudo yum install -y hdf5-devel netcdf-devel numpy && \
+            sudo yum install -y hdf5-devel netcdf-devel && \
             export PATH=${NETCDF_DIR}/bin:${PATH} && \
             python checkversion.py && \
             cd test && \
