--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,6 +90,7 @@ jobs:
         pip wheel . -w dist --no-deps 
         check-manifest --verbose 
         twine check dist/* 
+  
   test-aarch64:
     name: "Test ${{ matrix.pyver }} aarch64"
     strategy:
@@ -99,11 +100,6 @@ jobs:
       fail-fast: false
     runs-on: ubuntu-latest
     env:
-      PNETCDF_VERSION: 1.12.1
-      NETCDF_VERSION: 4.7.4
-      NETCDF_DIR: ${{ github.workspace }}/..
-      NETCDF_EXTRA_CONFIG: --enable-pnetcdf
-      CC: mpicc.mpich
       py: /opt/python/${{ matrix.pyver }}/bin/python
       img: quay.io/pypa/manylinux2014_${{ matrix.arch }}
     steps:
@@ -129,10 +125,9 @@ jobs:
             sudo yum install -y epel-release && \
             sudo yum-config-manager --enable epel && \
             sudo yum -y install mpich openmpi-devel hdf5-devel curl-devel wget && \
-            sudo yum -y install netcdf-devel && \
             source /etc/profile.d/modules.sh && \
             module load mpi && \
-            mpifort --version && \
+            #mpifort --version && \
             echo "Download and build PnetCDF version 1.12.1" && \
             wget https://parallel-netcdf.github.io/Release/pnetcdf-1.12.1.tar.gz && \
             tar -xzf pnetcdf-1.12.1.tar.gz && \
@@ -142,56 +137,19 @@ jobs:
             make install && \
             popd && \
             echo "Download and build netCDF version 4.7.4" && \
-            #wget ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf-c-4.7.4.tar.gz && \
-            #tar -xzf netcdf-c-4.7.4.tar.gz && \
-            #pushd netcdf-c-4.7.4 && \
+            wget ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf-c-4.7.4.tar.gz && \
+            tar -xzf netcdf-c-4.7.4.tar.gz && \
+            pushd netcdf-c-4.7.4 && \
             export CPPFLAGS="-I/usr/include/hdf5/mpich -I${{ github.workspace }}/../include" && \
             export LDFLAGS="-L${{ github.workspace }}/../lib" && \
             export LIBS="-lhdf5_mpich_hl -lhdf5_mpich -lm -lz" && \
-            #./configure CC="/usr/bin/arm-linux-gnueabihf-gcc-8" --prefix ${{ github.workspace }}/.. --enable-netcdf-4 --enable-shared --enable-dap --enable-parallel4 --enable-pnetcdf && \
-            #make -j 2 && \
-            #make install && \
-            #popd && \
-            #export PATH=${{ github.workspace }}/../bin:${PATH} && \ 
-            deactivate'
-    - name: Install dependencies
-      run: |
-            uname -m
-            docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
-            ${{ env.img }} \
-            bash -exc '${{ env.py }} -m pip install virtualenv && ${{ env.py }} -m venv .env && \
-            source .env/bin/activate && \
-            pip install numpy cython cftime pytest twine wheel check-manifest && \
-            deactivate'
-    - name: Install netcdf4-python
-      run: |
-            uname -m
-            docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
-            ${{ env.img }} \
-            bash -exc '\
-            source .env/bin/activate && \
-            uname -m && \
-            yum install -y sudo && \
-            sudo yum update && \
-            sudo yum install -y epel-release && \
-            sudo yum-config-manager --enable epel && \
-            sudo yum install -y hdf5-devel netcdf-devel && \
-            #export PATH=${{ github.workspace }}/../bin:${PATH} && \ 
+            ./configure CC="/usr/bin/arm-linux-gnueabihf-gcc-8" --prefix ${{ github.workspace }}/.. --enable-netcdf-4 --enable-shared --enable-dap --enable-parallel4 --enable-pnetcdf && \
+            make -j 2 && \
+            make install && \
+            popd && \
+			pip install numpy cython cftime pytest twine wheel check-manifest mpi4py && \
+            export PATH=${{ github.workspace }}/../bin:${PATH} && \ 
             python setup.py install && \
-            deactivate'
-    - name: Test with pytest
-      run: |
-            uname -m
-            docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
-            ${{ env.img }} \
-            bash -exc '\
-            source .env/bin/activate && \
-            uname -m && \
-            yum install -y sudo && \
-            sudo yum update && \
-            sudo yum install -y epel-release && \
-            sudo yum-config-manager --enable epel && \
-            sudo yum install -y hdf5-devel==1.10.4 netcdf-devel==4.7.4 && \
             export PATH=${{ github.workspace }}/../bin:${PATH} && \
             python checkversion.py && \
             cd test && \
@@ -212,19 +170,6 @@ jobs:
             else 
               echo "pnetcdf mpi test passed!" 
             fi && \
-            deactivate'
-    - name: Tarball
-      run: |
-            uname -m
-            docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
-            ${{ env.img }} \
-            bash -exc '${{ env.py }} -m pip install virtualenv && ${{ env.py }} -m venv .env && \
-            source .env/bin/activate && \
-            yum install -y sudo && \
-            sudo yum update && \
-            sudo yum install -y epel-release && \
-            sudo yum-config-manager --enable epel && \
-            sudo yum install hdf5-devel -y && \
             export PATH=${{ github.workspace }}/../bin:${PATH}  && \
             python setup.py --version && \  
             pip wheel . -w dist --no-deps && \ 
