--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -170,6 +170,7 @@ jobs:
               echo "pnetcdf mpi test passed!" 
             fi && \
             export PATH=${{ github.workspace }}/../bin:${PATH}  && \
+            python -m pip install --upgrade pip && \
             pip install twine && \
             python setup.py --version && \  
             pip wheel . -w dist --no-deps && \ 
