--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -147,7 +147,7 @@ jobs:
             #make -j 2 && \
             #make install && \
             popd && \
-            export PATH=${{ github.workspace }}/../bin:${PATH} && \ 
+            #export PATH=${{ github.workspace }}/../bin:${PATH} && \ 
             python setup.py install && \
             export PATH=${{ github.workspace }}/../bin:${PATH} && \
             python checkversion.py && \
