--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -150,7 +150,7 @@ jobs:
             popd && \
             #export PATH=${{ github.workspace }}/../bin:${PATH} && \ 
             python -m pip install --upgrade pip && \
-            pip install numpy cython cftime pytest twine wheel check-manifest mpi4py && \
+            sudo pip install numpy cython cftime pytest twine wheel check-manifest mpi4py && \
             python setup.py install && \
             export PATH=${{ github.workspace }}/../bin:${PATH} && \
             python checkversion.py && \
