--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -147,8 +147,8 @@ jobs:
             gcc -v && \
             python -m pip install --upgrade pip && \
             sudo pip install numpy cython cftime pytest twine wheel check-manifest mpi4py && \
-            ./configure --prefix ${{ github.workspace }}/.. && \
-            #CC="/usr/bin/arm-linux-gnueabihf-gcc-8" --prefix ${{ github.workspace }}/.. --enable-shared && \
+            ./configure && \
+            #--prefix ${{ github.workspace }}/.. CC="/usr/bin/arm-linux-gnueabihf-gcc-8" --prefix ${{ github.workspace }}/.. --enable-shared && \
             make -j 2 && \
             make install && \
             popd && \
