--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,6 +137,14 @@ jobs:
             make -j 2 && \
             make install && \
             popd && \
+            mkdir /tmp/mpich-3 && \
+            cd /tmp/mpich-3 && \
+            wget http://www.mpich.org/static/downloads/3.4.1/mpich-3.4.1.tar.gz && \
+            tar -xvf  mpich-3.4.1.tar.gz && \
+            mkdir /root/mpich-install && \
+            cd mpich-3.4.1 && \
+            ./configure -prefix=/root/mpich-install |& tee c.txt && \
+            make 2>&1 | tee m.txt && \
             echo "Download and build netCDF version 4.7.4" && \
             wget ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf-c-4.7.4.tar.gz && \
             tar -xzf netcdf-c-4.7.4.tar.gz && \
@@ -145,14 +153,14 @@ jobs:
             export LDFLAGS="-L${{ github.workspace }}/../lib" && \
             export LIBS="-lhdf5_mpich_hl -lhdf5_mpich -lm -lz" && \
             gcc -v && \
-            python -m pip install --upgrade pip && \
-            sudo pip install numpy cython cftime pytest twine wheel check-manifest mpi4py && \
-            ./configure && \
-            #--prefix ${{ github.workspace }}/.. CC="/usr/bin/arm-linux-gnueabihf-gcc-8" --prefix ${{ github.workspace }}/.. --enable-shared && \
+            ./configure CC=mpicc.mpich --enable-shared && \
+            #--prefix ${{ github.workspace }}/..  && \
             make -j 2 && \
             make install && \
             popd && \
-            #export PATH=${{ github.workspace }}/../bin:${PATH} && \ 
+            python -m pip install --upgrade pip && \
+            sudo pip install numpy cython cftime pytest twine wheel check-manifest mpi4py && \
+            export PATH=${{ github.workspace }}/../bin:${PATH} && \ 
             python setup.py install && \
             export PATH=${{ github.workspace }}/../bin:${PATH} && \
             python checkversion.py && \
