--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -149,10 +149,9 @@ jobs:
             make -j 2 && \
             make install && \
             popd && \
-            whereis netcdf && \             
             python -m pip install --upgrade pip && \
-            sudo pip install numpy cython cftime pytest twine wheel check-manifest mpi4py && \
-            #export PATH=${{ github.workspace }}/../bin:${PATH} 
+            pip install numpy cython cftime pytest twine wheel check-manifest mpi4py && \
+            export PATH=/home/runner/work/netcdf4-python/netcdf4-python/../bin:${PATH} 
             python setup.py install && \
             export PATH=${{ github.workspace }}/../bin:${PATH} && \
             python checkversion.py && \
